--- a/src/app/delores/delores.component.html
+++ b/src/app/delores/delores.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <div *ngFor="let post of posts">
+  <div *ngFor="let post of posts | deloresPipe">
     <li>
       <h3>{{post.title}}</h3>
       <h5>{{post.text}}</h5>
